roco-gen/src/snapshots/roco_gen__tera_ext__tests__can_render_form_field_[form_jsonb!_jsonb!].snap
---
source: roco-gen/src/tera_ext.rs
expression: "format!(\"Create form\\n\\n{create_form}\\n\\nEdit Form\\n\\n{edit_form}\")"
---
Create form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">jsonb!</label>
    <textarea class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="jsonb!" name="jsonb!" type="text" rows="10" cols="50" required></textarea>
</div>

Edit Form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">jsonb!</label>
    <textarea class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="jsonb!" name="jsonb!" type="text" rows="10" cols="50" required>{{item.jsonb!}}</textarea>
</div>
